--- a/Savio/SAOfferList/SAOfferListViewController.xib
+++ b/Savio/SAOfferList/SAOfferListViewController.xib
@@ -1,22 +1,30 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Medium.otf">
+        <array key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
-        </mutableArray>
-        <mutableArray key="gotham-rounded-book-2.otf">
+        </array>
+        <array key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
-        </mutableArray>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAOfferListViewController" customModule="Savio" customModuleProvider="target">
             <connections>
                 <outlet property="bottomview" destination="UA4-gr-ZH8" id="kyT-m8-9h0"/>
                 <outlet property="closeLbl" destination="9Kl-A0-gsj" id="7jA-bX-RSu"/>
+                <outlet property="offersButton" destination="wSo-UJ-dIm" id="cuF-OK-ZxS"/>
+                <outlet property="progressButton" destination="KhP-YT-Iih" id="Dri-mu-JEz"/>
+                <outlet property="spendButton" destination="ucQ-fN-2Xf" id="mxh-8F-eFY"/>
+                <outlet property="tabVw" destination="bfz-tl-Wxe" id="q50-Nw-oxo"/>
                 <outlet property="tblView" destination="5db-mO-Sls" id="lOH-aW-Ean"/>
                 <outlet property="tblViewBottomSpace" destination="sY6-CT-agj" id="euZ-dZ-i3d"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -24,41 +32,41 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5db-mO-Sls">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5db-mO-Sls">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="559"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="5iz-Be-2sT"/>
                         <outlet property="delegate" destination="-1" id="ek6-DP-7Tu"/>
                     </connections>
                 </tableView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UA4-gr-ZH8">
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UA4-gr-ZH8">
                     <rect key="frame" x="0.0" y="559" width="600" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-A0-gsj">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="x" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-A0-gsj">
                             <rect key="frame" x="290" y="3" width="20" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="20" id="1Vv-jn-oVb"/>
                                 <constraint firstAttribute="height" constant="20" id="zdq-fs-06c"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skip offers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GM7-wQ-fC1">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Skip offers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GM7-wQ-fC1">
                             <rect key="frame" x="269" y="19" width="62" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="62" id="jtP-5M-6p2"/>
                                 <constraint firstAttribute="height" constant="21" id="mVb-2O-0ZD"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="11"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zk0-aW-TDe">
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zk0-aW-TDe">
                             <rect key="frame" x="263" y="6" width="74" height="27"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="27" id="Cwt-7K-sCG"/>
@@ -69,7 +77,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="9Kl-A0-gsj" firstAttribute="top" secondItem="UA4-gr-ZH8" secondAttribute="top" constant="3" id="94i-fL-hlE"/>
                         <constraint firstItem="GM7-wQ-fC1" firstAttribute="centerX" secondItem="UA4-gr-ZH8" secondAttribute="centerX" id="Z6n-YO-Aga"/>
@@ -80,9 +88,63 @@
                         <constraint firstItem="GM7-wQ-fC1" firstAttribute="top" secondItem="UA4-gr-ZH8" secondAttribute="top" constant="19" id="znw-hf-J3v"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bfz-tl-Wxe">
+                    <rect key="frame" x="0.0" y="549" width="600" height="52"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ucQ-fN-2Xf">
+                            <rect key="frame" x="0.0" y="2" width="200" height="50"/>
+                            <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="ot5-Sx-tw6"/>
+                            </constraints>
+                            <color key="tintColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="spendButtonPressed:" destination="-1" eventType="touchUpInside" id="YgB-Rm-gNd"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wSo-UJ-dIm">
+                            <rect key="frame" x="400" y="2" width="200" height="50"/>
+                            <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="jo7-oW-gNj"/>
+                            </constraints>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KhP-YT-Iih">
+                            <rect key="frame" x="200" y="0.0" width="200" height="52"/>
+                            <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="200" id="4xO-2w-8K9"/>
+                            </constraints>
+                            <color key="tintColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="progressButtonPressed:" destination="-1" eventType="touchUpInside" id="0ht-A9-1xf"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="bottom" secondItem="ucQ-fN-2Xf" secondAttribute="bottom" id="2wz-Qu-tC6"/>
+                        <constraint firstAttribute="trailing" secondItem="wSo-UJ-dIm" secondAttribute="trailing" id="3Ba-BA-3pc"/>
+                        <constraint firstAttribute="height" constant="52" id="3EU-Vu-4Ih"/>
+                        <constraint firstItem="ucQ-fN-2Xf" firstAttribute="width" secondItem="KhP-YT-Iih" secondAttribute="width" id="5P2-mm-JLT"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="width" secondItem="wSo-UJ-dIm" secondAttribute="width" id="GOW-kd-KpU"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="top" secondItem="bfz-tl-Wxe" secondAttribute="top" id="J7H-Qt-Zu0"/>
+                        <constraint firstAttribute="bottom" secondItem="KhP-YT-Iih" secondAttribute="bottom" id="QBf-sh-1bu"/>
+                        <constraint firstItem="wSo-UJ-dIm" firstAttribute="leading" secondItem="KhP-YT-Iih" secondAttribute="trailing" id="VCq-Os-1w8"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="leading" secondItem="ucQ-fN-2Xf" secondAttribute="trailing" id="Yrb-GU-4ve"/>
+                        <constraint firstItem="ucQ-fN-2Xf" firstAttribute="leading" secondItem="bfz-tl-Wxe" secondAttribute="leading" id="a7n-Qs-01g"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="centerX" secondItem="bfz-tl-Wxe" secondAttribute="centerX" id="aMn-gs-bQB"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="bottom" secondItem="wSo-UJ-dIm" secondAttribute="bottom" id="bxV-23-3IE"/>
+                        <constraint firstItem="KhP-YT-Iih" firstAttribute="leading" secondItem="ucQ-fN-2Xf" secondAttribute="trailing" id="jTe-il-JrR"/>
+                        <constraint firstItem="wSo-UJ-dIm" firstAttribute="leading" secondItem="KhP-YT-Iih" secondAttribute="trailing" id="vum-q6-I3t"/>
+                    </constraints>
+                </view>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="5db-mO-Sls" secondAttribute="trailing" id="9FQ-ri-A8w"/>
+                <constraint firstItem="bfz-tl-Wxe" firstAttribute="width" secondItem="UA4-gr-ZH8" secondAttribute="width" id="Fg0-DP-mz8"/>
                 <constraint firstItem="5db-mO-Sls" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="QCj-Fh-jTC"/>
                 <constraint firstItem="5db-mO-Sls" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UmO-Tp-uv2"/>
                 <constraint firstAttribute="trailing" secondItem="UA4-gr-ZH8" secondAttribute="trailing" id="Yli-cJ-fWZ"/>
@@ -90,7 +152,9 @@
                 <constraint firstItem="UA4-gr-ZH8" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" id="duz-Uk-Wil"/>
                 <constraint firstItem="UA4-gr-ZH8" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" id="foV-Yj-Drv"/>
                 <constraint firstAttribute="bottom" secondItem="UA4-gr-ZH8" secondAttribute="bottom" constant="1" id="llI-yK-81W"/>
+                <constraint firstItem="bfz-tl-Wxe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="piQ-un-CC6"/>
                 <constraint firstAttribute="bottom" secondItem="5db-mO-Sls" secondAttribute="bottom" constant="41" id="sY6-CT-agj"/>
+                <constraint firstItem="bfz-tl-Wxe" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" constant="-10" id="tPA-In-MA8"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
